<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrencyExchange">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="number" />
        <TextView
            android:id="@+id/showmoney"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:hint="your result"
            android:layout_height="wrap_content" />

        <Button
               android:layout_width="match_parent"
               android:layout_marginTop="16dp"
               android:text="@string/dollar"
               android:onClick="dollar"
               android:layout_height="wrap_content" />

        <Button
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:text="@string/euro"
                android:onClick="euro"
                android:layout_height="wrap_content" />

        <Button
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:text="@string/won"
                android:onClick="won"
                android:layout_height="wrap_content" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/config"
            android:onClick="config"/>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>